--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,39 +26,40 @@ dependencies:
 
   # Storage
   shared_preferences: ^2.2.2
-  
-  # QR Code (FIXED VERSION)
+
+  # QR Code
   qr_flutter: ^4.1.0
 
-    # PDF & Export
+  # PDF & Export
   pdf: ^3.10.8
   printing: ^5.12.0
   path_provider: ^2.1.2
   share_plus: ^7.2.0
 
+  # UI
   google_fonts: ^6.2.1
   url_launcher: ^6.1.0
 
   # Media
   image_picker: ^1.0.4
-  
-  # Untuk Responsive (Nanti)
-  # flutter_screenutil: ^5.9.0
-  # responsive_framework: ^0.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.13.1
 
 flutter:
   uses-material-design: true
-  
-  # Assets
+
   assets:
     - assets/images/thekelan.jpg
     - assets/images/wekas.jpg
     - assets/images/suwanting.jpeg
     - assets/images/merbabu.jpg
+    - assets/icon/
 
-  generate: true
+flutter_icons:
+  android: true
+  ios: false
+  image_path: assets/icon/app_icon.png
