--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,9 +57,8 @@ flutter:
     - assets/images/wekas.jpg
     - assets/images/suwanting.jpeg
     - assets/images/merbabu.jpg
-    - assets/icon/
 
-flutter_icons:
+flutter_launcher_icons:
   android: true
   ios: false
   image_path: assets/icon/app_icon.png
